--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,8 +1,23 @@
 {
   "branches": ["main"],
   "plugins": [
-    "@semantic-release/commit-analyzer",
+    [
+      "@semantic-release/commit-analyzer",
+      {
+        "preset": "angular",
+        "releaseRules": [
+          { "type": "chore", "release": "patch" },
+          { "type": "ci", "release": "patch" },
+          { "type": "docs", "release": "patch" },
+          { "type": "feat", "release": "patch" },
+          { "type": "fix", "release": "patch" }
+        ]
+      }
+    ],
     "@semantic-release/release-notes-generator",
-    "@semantic-release/github"
+    "@semantic-release/github",
+    "@semantic-release/git",
+    "@semantic-release/npm",
+    "@semantic-release/changelog"
   ]
 }
