chore: changes in .releaserc.json

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -9,12 +9,13 @@
           { "type": "chore", "release": "patch" },
           { "type": "ci", "release": "patch" },
           { "type": "docs", "release": "patch" },
-          { "type": "feat", "release": "patch" },
+          { "type": "feat", "release": "minor" },
           { "type": "fix", "release": "patch" }
         ]
       }
     ],
     "@semantic-release/release-notes-generator",
-    "@semantic-release/github"
+    "@semantic-release/github",
+    "@semantic-release/npm"
   ]
 }
