--- a/.releaserc.json
+++ b/.releaserc.json
@@ -15,7 +15,6 @@
       }
     ],
     "@semantic-release/release-notes-generator",
-    "@semantic-release/github",
-    "@semantic-release/npm"
+    "@semantic-release/github"
   ]
 }
