--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "@vitejs/plugin-react": "^4.0.4",
+    "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
     "chromatic": "^6.20.0",
     "cypress": "^13.13.1",
@@ -58,12 +59,14 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
+    "postcss": "^8.4.40",
     "prettier": "^3.0.0",
     "semantic-release": "^24.0.0",
     "storybook": "^7.2.0",
     "stylelint": "^15.10.2",
     "stylelint-config-recess-order": "^4.3.0",
     "stylelint-config-standard": "^34.0.0",
+    "tailwindcss": "^3.4.7",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6",
     "vite": "^4.4.12"
